Ещё изменение для deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "spacedev_0.0.2",
+  "homepage": "https://vromanenko04.github.io/spacedev-0.0.2/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
