--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.6",
     "@rollup/plugin-replace": "^5.0.2",
+    "esbuild": "^0.19.4",
     "firebase": "^10.4.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
