--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rollup/plugin-replace": "^5.0.2",
     "esbuild": "^0.19.4",
     "firebase": "^10.4.0",
+    "framer-motion": "^10.16.4",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
